# WeYS

./: .gitignore  Cargo.toml  README.md  basic.ahk  bun.lockb  httpocr.py  lib.ahk  package-lock.json  package.json  yuanshen.ahk  yuanshen_c.ahk  启动OCR.bat
.github/: pull_request_template.md
.github/workflows/: alpha.yml  publish.yml
ahk/: api.ahk  basic.ahk  counter.ahk  gui.ahk  lib.ahk  ys-ahk.ini  yuanshen.ahk  yuanshen_c.ahk  yuanshen_h.ahk
app/: .prettierrc  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
app/public/i18n/en/: translation.json
app/public/i18n/zh-CN/: translation.json
app/src/: App.vue  components.d.ts  env.ts  gen.ts  i18n.ts  main.ts  router.ts  style.css
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs
app/src-tauri/src/services/game/: game.rs  mod.rs  slider.rs  util.rs
app/src/components/: AudioPlayButton.vue  CheckAnimationButton.vue  Counter.vue  Dialog.vue  EmojiSelect.vue  GQAutoPage.vue  GQQuery.vue  Icon.vue  LocalQQ.vue  Popover.vue  QQAvatar.vue  ResizeableWindow.vue  RichInput.vue  ScrollArea.vue  Sidebar.vue  SidebarButton.vue  StatisticsProgress.vue  Toast.vue  Tooltip.vue  UserItem.vue
app/src/components/contextmenu/: ContextMenu.vue  index.ts
app/src/components/select/: Select.vue  SelectItem.vue  index.ts
app/src/mod/: index.ts
app/src/mod/api/: app.ts  asr.ts  game.ts  gradio.ts  graphql.ts  miyoushe.ts  mutation.ts  query.ts  rtc.ts  swindow.ts  tts.ts  vad.ts
app/src/mod/db/: index.ts  types.ts
app/src/mod/http/: graphql.ts
app/src/mod/state/: game.ts  index.ts  setting.ts  ui.ts  user.ts
app/src/mod/util/: audio.ts  copy.ts  html.ts
app/src/views/: Chat.vue  ChatRoom.vue  Download.vue  Game.vue  Home.vue  Setting.vue  SingleChatRoom.vue  User.vue  Voice.vue
client/: Cargo.toml  config.yml
client/.cargo/: config.toml
client/src/: build.rs  main.rs
lib/: Cargo.toml
lib/src/: config.rs  cooker.rs  game.rs  lib.rs  ocr.rs  ppocr.rs  util.rs
server/: .gitignore  .prettierrc  drizzle.config.ts  package.json  tsconfig.json
server/browser_src/: index.html  index.js  rnnoise-processor.ts
server/browser_src/components/: App.vue  VoiceChat.vue
server/browser_src/css/: index.css
server/browser_src/public/assets/: rnnoise-processor.js
server/browser_src/util/: denoise.ts  rtc.ts  socket.ts  soundeffect.ts
server/drizzle/: 0000_slippery_dorian_gray.sql  0000_sparkling_rogue.sql  0001_neat_steve_rogers.sql
server/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
server/src/: hot.ts  index.ts
server/src/db/: index.ts  migrate.ts  schema.ts  yoga.ts
server/src/db/kv/: room.ts  task.ts
server/src/db/mod/: index.ts  message.ts  room.ts  rtc.ts  task.ts  user.ts
server/src/rt/: pubsub.ts
server/src/util/: html.test.ts  html.ts
