[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
encoding = "0.2.33"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
image = "0.25"
imageproc = "0.25"
console = "0.15"
lazy_static = "1.4"
reqwest = { version = "0.12", features = ["blocking"] }
retry = "2"
base64 = "0.22"
chrono = "0.4"
template-matching = { version = "0.2.0", features = ["image"] }
# opencv = { version = "0.91", default-features = false, features = ["imgproc"] }
# paddle的依赖
ndarray = "0.15.6"
ort = "2.0.0-rc.2"
thiserror = "1"
[dependencies.windows]
version = "0.56.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_UI",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
]
