[package]
name = "weys-app"
version = "1.4.0"
description = "weys app"
authors = ["weys"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]


[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
thiserror = "1"
sysinfo = "0.30"
windows-core = "0.58"
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_DataExchange",
] }
lazy_static = "1"
widestring = "1"
tokio = { version = "1", features = ["full"] }
tauri = { version = "2.0.0-beta", features = [
    "tray-icon",
    "image-ico",
    "unstable",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.5"
window-shadows = "0.2"
winreg = "0.52"
regex = "1.10"
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-clipboard-manager = "2.1.0-beta"
tauri-plugin-os = "2.0.0-beta"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"
tauri-plugin-window-state = "2.0.0-beta"
crossbeam-channel = "0.5.13"
once_cell = "1.19.0"
image = "0.25"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "cookies"] }
[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
